@@ -1,0 +1,1 @@
+declare r as reference to array 3 of int
