@@ -1,0 +1,1 @@
+cdecl | -xc++ | declare r as reference to array 3 of int | 0
